--- a/example/index.html
+++ b/example/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Animation test</title>
+    <title>序列图像预览-VFXware</title>
 
     <style>
         .canvas1-block{
+            position: relative;
             max-width: 800px;
             margin-left:  auto;
             margin-right:  auto;
+        }
+        .tag-overlay{
+            position: absolute;
+            font-size: 16px;
+            text-align: center;
+            padding-bottom: 50px;
+            height: 40px;
+            color: red;
+            pointer-events: none;
+            border: 2px solid white;
         }
         .canvas{
             /*border: 1px solid red;*/
@@ -55,7 +66,7 @@
 
 <div class="container pt-4 pb-4">
     <h1 class="text-center">
-        <a href="https://github.com/its2easy/animate-images" target="_blank">animate-images</a> example
+        序列图像预览示例 - VFXWare工作室 - 羽人飞鹭
     </h1>
 
     <!--  CONTROLS-->
@@ -65,25 +76,28 @@
                 <div class="col-12 col-lg-9 col-xl-9">
                     <div class="btn-toolbar justify-content-center">
                         <div class="btn-group mb-2 me-2 justify-content-center" role="group">
-                            <button type="button" class="btn btn-success js-play">Play</button>
-                            <button type="button" class="btn btn-danger js-stop">Stop</button>
-                            <button type="button" class="btn btn-info js-toggle">Toggle</button>
-                            <button type="button" class="btn btn-info js-next">Next</button>
-                            <button type="button" class="btn btn-info js-prev">Prev</button>
-                            <button type="button" class="btn btn-info js-reset">Reset</button>
-                            <button type="button" class="btn btn-warning link-light js-reverse">Reverse</button>
-                            <button type="button" class="btn btn-warning link-light js-loop">Loop</button>
-                            <button type="button" class="btn btn-warning link-light js-draggable">Draggable</button>
+                            <button type="button" class="btn btn-success js-play">播放</button>
+                            <button type="button" class="btn btn-danger js-stop">停止</button>
+                            <button type="button" class="btn btn-info js-toggle">暂停</button>
+                            <button type="button" class="btn btn-info js-next">下一帧</button>
+                            <button type="button" class="btn btn-info js-prev">前一帧</button>
+                            <button type="button" class="btn btn-info js-reset">重置</button>
+                            <button type="button" class="btn btn-warning link-light js-reverse">反播</button>
+                            <button type="button" class="btn btn-warning link-light js-loop">循环</button>
+                            <button type="button" class="btn btn-warning link-light js-draggable">能否手势拖动</button>
+                            <button type="button" class="btn btn-warning link-light js-tagshowhide">是否显示标签</button>
                         </div>
+
                         <div class="btn-group mb-2" role="group">
-                            <button type="button" class="btn btn-warning link-light js-cover off">Cover</button>
-                            <button type="button" class="btn btn-warning link-light js-contain off">Contain</button>
+                            <button type="button" class="btn btn-warning link-light js-cover off">平铺</button>
+                            <button type="button" class="btn btn-warning link-light js-contain off">包含</button>
                         </div>
+
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 col-xl-3">
                     <div class="form-group">
-                        <label for="formControlRange">Frames</label>
+                        <label for="formControlRange">帧</label>
                         <input class="form-control-range js-frames-input" id="formControlRange" max="100" min="1" type="range"
                                value="1">
                     </div>
@@ -94,7 +108,7 @@
                     <div class="input-group mb-2 mx-auto" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="1" value="1">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary js-set-frame" type="button">Set frame</button>
+                            <button class="btn btn-outline-secondary js-set-frame" type="button">设置帧</button>
                         </div>
                     </div>
                 </div>
@@ -102,7 +116,7 @@
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 230px;">
                         <input type="text" class="form-control" placeholder="10" value="10">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary js-play-to" type="button">Play to (frame)</button>
+                            <button class="btn btn-outline-secondary js-play-to" type="button">播到第几帧</button>
                         </div>
                     </div>
                 </div>
@@ -110,7 +124,7 @@
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 230px;">
                         <input type="text" class="form-control" placeholder="20" value="20">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary js-play-frames" type="button">Play Frames</button>
+                            <button class="btn btn-outline-secondary js-play-frames" type="button">继续播放多少帧</button>
                         </div>
                     </div>
                 </div>
@@ -118,7 +132,7 @@
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="60" value="60">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary js-set-fps" type="button">Set fps</button>
+                            <button class="btn btn-outline-secondary js-set-fps" type="button">设置帧率</button>
                         </div>
                     </div>
                 </div>
@@ -126,7 +140,7 @@
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="2" value="2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary js-set-ratio" type="button">Set ratio</button>
+                            <button class="btn btn-outline-secondary js-set-ratio" type="button">设置图像比例</button>
                         </div>
                     </div>
                 </div>
@@ -135,9 +149,14 @@
             <!--CANVAS BLOCK-->
             <div class="canvas1-block">
                 <canvas id="canvas1" class="canvas canvas1" width="800" height="500"></canvas>
+<!--                <div class="tag-overlay">-->
+<!--                    <h1>标签在此</h1>-->
+<!--                </div>-->
             </div>
+
+
             <!-- ============  -->
-            <div class="loading loading1">Loading <span>0</span>%</div>
+            <div class="loading loading1">加载 <span>0</span>%</div>
 
         </div>
 
