--- a/example/index.html
+++ b/example/index.html
@@ -88,7 +88,7 @@
                             <button type="button" class="btn btn-warning link-light js-tagshowhide">是否显示标签</button>
                         </div>
 
-                        <div class="btn-group mb-2" role="group">
+                        <div class="btn-group mb-2" role="group" style="visibility: hidden">
                             <button type="button" class="btn btn-warning link-light js-cover off">平铺</button>
                             <button type="button" class="btn btn-warning link-light js-contain off">包含</button>
                         </div>
