--- a/example/index.html
+++ b/example/index.html
@@ -145,7 +145,8 @@
                 </div>
                 <div class="col-12 col-lg-3 col-xl-3">
                     <div class="form-group">
-                        <label for="formControlRange">帧</label>
+
+                        <label class="js-show-frame" for="formControlRange">帧</label>
                         <input class="form-control-range js-frames-input" id="formControlRange" max="100" min="1" type="range"
                                value="1">
                     </div>
