Adjusted tag animation, added the music function.

--- a/example/index.html
+++ b/example/index.html
@@ -198,9 +198,9 @@
             <!--CANVAS BLOCK-->
             <div class="canvas1-block">
                 <canvas id="canvas1" class="canvas canvas1" width="800" height="500"></canvas>
-<!--                <div class="tag-overlay">-->
-<!--                    <h1>标签在此</h1>-->
-<!--                </div>-->
+                <div class="tag-overlay js-sound-btn" style="bottom: 50px; right:50px; font-size:24px; z-index: 1001; color:white;">
+                    <i class="bi bi-music-note"></i>
+                </div>
             </div>
 
 
