--- a/example/index.html
+++ b/example/index.html
@@ -114,7 +114,7 @@
 
 <div class="container pt-4 pb-4">
     <h1 class="text-center">
-        序列图像预览示例 - VFXWare工作室 - 羽人飞鹭
+        序列图像交互DEMO - 羽人飞鹭VFXWare工作室 - 18677090602
     </h1>
 
     <!--  CONTROLS-->
@@ -188,7 +188,7 @@
                 <div class="col-auto">
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="2" value="2">
-                        <div class="input-group-append">
+                        <div class="input-group-append" style="visibility: hidden">
                             <button class="btn btn-outline-secondary js-set-ratio" type="button">设置图像比例</button>
                         </div>
                     </div>
