Change little on layout

--- a/example/index.html
+++ b/example/index.html
@@ -52,9 +52,9 @@
             }
         }
 
-        * {
-            transition: all .2s ease;
-        }
+        /** {*/
+        /*    transition: all .2s ease;*/
+        /*}*/
 
         .tag-overlay{
             position: absolute;
@@ -114,7 +114,7 @@
 
 <div class="container pt-4 pb-4">
     <h1 class="text-center">
-        序列图像交互DEMO - 羽人飞鹭VFXWare工作室 - 18677090602
+        序列图像交互DEMO
     </h1>
 
     <!--  CONTROLS-->
@@ -185,10 +185,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-auto">
+                <div class="col-auto" style="visibility: hidden">
                     <div class="input-group mb-2 mx-auto js-option-block" style="max-width: 150px;">
                         <input type="text" class="form-control" placeholder="2" value="2">
-                        <div class="input-group-append" style="visibility: hidden">
+                        <div class="input-group-append" >
                             <button class="btn btn-outline-secondary js-set-ratio" type="button">设置图像比例</button>
                         </div>
                     </div>
@@ -209,6 +209,10 @@
 
         </div>
 
+    </div>
+    <div>
+        <h3 class="text-center">本示例暂时仅支持桌面浏览器</h3>
+        <h3 class="text-center">羽人飞鹭VFXWare工作室 - 18677090602</h3>
     </div>
 </div><!--/.container-->
 
